--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-openai==1.6.0
+openai==1.76.0
 python-dotenv==1.0.0
 numpy==1.24.3
 pandas==2.0.3
@@ -6,4 +6,5 @@ matplotlib==3.7.2
 seaborn==0.12.2
 pyyaml==6.0.1
 scipy==1.10.1
-jinja2==3.1.6
+jinja2>=3.0.0
+pyyaml>=6.0
